<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="count_bmi">Count BMI</string>
    <string name="mass_label">Mass</string>
    <string name="height_label">Height</string>
    <string name="enter_mass_text">Enter Your mass here</string>
    <string name="enter_height_text">Enter Your height here</string>
    <string name="bmi_label_label">BMI:</string>
    <string name="bmi_result_underweight">Your weight is to low!</string>
    <string name="bmi_result_normal_range">Your weight is correct!</string>
    <string name="bmi_result_overweight">You have overweight!</string>
    <string name="bmi_result_obese">You are obese, fatty!</string>

    <string name="incorrect_input_message">You\'ve entered incorrect data!</string>
    <string name="empty_input_message">Please enter height and mass</string>
    <string name="saved_data_message">Saved data</string>
    
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="author">Author</string>

    <string name="unit_label">Units:</string>
    <string name="metric_units">Metric kg/m</string>
    <string name="imperial_units">Imperial lb/in</string>

    <string name="author_label">Author</string>
    <string name="author_info_line1">Tomasz Cybulski</string>
    <string name="author_info_line2">II Year Computer Science Student</string>
    <string name="author_image_description">Author\'s photo</string>


    <string name="facebook_app_id">1023526087748730</string>

    <string name="options">Options</string>
    <string name="share_result_sentence">My BMI is: </string>
    <string name="type_text_plain">"text/plain"</string>
    <string name="share_subject">Share</string>

    <!-- SharedPreference keys -->
    <string name="use_metric_units_shared_pref_key">use_metric_units</string>
    <string name="saved_mass_shared_pref_key">saved_mass</string>
    <string name="saved_height_shared_pref_key">saved_height</string>

    <!-- SavedInstanceState keys -->

    <string name="mass_saved_instance_state_key">mass_saved_instance_state</string>
    <string name="height_saved_instance_state_key">height_saved_instance_state</string>
    <string name="result_bmi_saved_instance_state_key">bmi_saved_instance_state</string>
    <string name="message_saved_instance_state_key">message_saved_instance_state</string>
    <string name="color_saved_instance_state_key">color_saved_instance_state</string>
</resources>
