<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_author"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="cybulski.tomasz.tomaszcybulskilab1.Activities.AuthorActivity">

    <TextView
        android:id="@+id/text_view_author_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>
    <ImageView
        android:layout_below="@id/text_view_author_label"
        android:id="@+id/image_view_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/author"
        android:layout_margin="10dp"
        android:contentDescription="@string/author_image_description"/>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/text_view_author_info_line1"
    android:layout_below="@id/image_view_author"
    android:layout_centerHorizontal="true"
    android:text="@string/author_info_line1"
    android:textSize="20sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_author_info_line2"
        android:layout_below="@id/text_view_author_info_line1"
        android:layout_centerHorizontal="true"
        android:text="@string/author_info_line2"
        android:textSize="20sp"
        />
</RelativeLayout>
